# techroof

./: .gitignore  package.json
.github/workflows/: publish.yaml
scripts/: release.js  version.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
